# adaptive-SNNs

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
scripts/: FI_curve.py  MWE.py  get_most_results_results_from_snellius.sh  helpers.py  network_tuning.py  neuron_tuning_curve.py  parameter_testing.py  plot_STA_noise_level.py  plot_basic_learning_mechanism.py  plot_network_tuning_results.py  rate_learning_experiment.py  run_on_double_integrator.py  simulate_OUP.py  simulate_balancing.py  simulate_learning.py  simulate_learning_output_rate.py  simulate_network.py  simulate_noisy_neuron.py  simulate_noisy_neurons.py  sync_to_snellius.sh
scripts/old/: network_tuning.py  plot_network_tuning_results.py  run_on_double_integrator.py  simulate_OUP.py  simulate_network.py  simulate_noisy_neuron.py
scripts/overnight/: analyze_learning_and_tier2.py  analyze_v2.py  plot_paired_comparison.py  plot_theory_validation.py  run_learning_dynamics.py  run_paired_comparison.py  run_paired_comparison_v2.py  run_theory_validation.py  run_tier2_patterns.py  run_tier2_patterns_large.py
scripts/plots/: STA_noise_level.py  STDP.py  balanced_input_tuning.py  cross_correlation.py  learning_mechanism_overview.py  perturbation_distribution.py  plot_STA_noise_level.py  plot_STDP.py  plot_balanced_input_tuning.py  plot_biofeedback_experiment.py  plot_cross_corr_and_perturbation_effect.py  (+6 more)
tests/: conftest.py  helpers.py  test_environment.py  test_models.py  test_oua_mean_reversion.py  test_per_synapse_oup.py  test_reward_RLS.py  test_simulation.py  test_solver.py
(+104 files in other folders)
