[project]
name = "adaptive-snn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffrax==0.7.0",
    "jax>=0.7.2",
    "joblib>=1.5.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
